--- a/src/common.css
+++ b/src/common.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
-
-body {
-    font-family: 'Kosugi Maru', sans-serif;
-}
-
 ul {
     list-style: none;
 }
@@ -26,9 +20,37 @@ ul li {
     width: 100%;
 }
 
+.title {
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    border-bottom: solid thin black;
+}
+
 .subtitle {
     text-align: center;
     margin: 1rem 0;
+}
+
+.center {
+    text-align: center;
+}
+
+.link {
+    color: black;
+}
+
+.link:hover {
+    color: black;
+    text-decoration: none;
+}
+
+.top-link-container {
+    border-bottom: none;
+}
+
+.top-link-container:hover {
+    background-color: red;
 }
 
 .logo {
@@ -65,4 +87,98 @@ p {
     border-radius: 5px;
     box-sizing: border-box;
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.work-panel {
+    height: 100%;
+    border: solid thin black;
+    border-radius: 5px;
+    box-sizing: border-box;
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.2);
+    padding-bottom: 0.4rem;
+    cursor: pointer;
+}
+
+.work-image {
+    width: 100%;
+    height: 10rem;
+    border-radius: 4px 4px 0 0;
+    background-color: green;
+}
+
+.work-title {
+    text-align: center;
+    margin-top: 0.4rem;
+}
+
+.footer {
+    width: 100%;
+    text-align: center;
+    background-color: red;
+    margin-top: 2rem;
+    padding: 1rem 0 2rem 0;
+}
+
+.sitemap {
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+}
+
+.sitemap-item {
+    margin: 0 0.5rem;
+}
+
+.work-detail-panel {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(64, 64, 64, 0.8);
+    z-index: 100;
+}
+
+.work-detail-contents {
+    position: absolute;
+    overflow: scroll;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    max-width: 90vw;
+    max-height: 90vh;
+    min-width: 20rem;
+    background-color: white;
+    border: solid thin black;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.work-detail-image {
+    width: 100%;
+    height: 10rem;
+    border-radius: 4px 4px 0 0;
+    background-color: green;
+}
+
+.work-detail-text-paragraph {
+    margin-top: 1rem;
+}
+
+.work-detail-text {
+    padding: 1rem;
+}
+
+.close-button {
+    position: absolute;
+    font-size: 2rem;
+    color: black;
+    background-color: white;
+    width: 3rem;
+    height: 3rem;
+    margin: 1rem;
+    border-radius: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    z-index: 500;
 }
