--- a/src/common.css
+++ b/src/common.css
@@ -9,6 +9,23 @@ ul li {
     background-size: 16px auto;
 }
 
+.bg-color1 {
+    background-color: #fef6e4;
+    color: #172c66;
+}
+
+.bg-color2 {
+    background-color: #f3d2c1;
+    color: #172c66;
+}
+
+.background {
+    background-image: url("./img/Background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 .space {
     min-height: 100vh;
     display: flex;
@@ -20,11 +37,13 @@ ul li {
     text-align: center;
     width: 100%;
     margin: 0;
-    border-bottom: solid thin black;
+    color: #fef6e4;
+    border-bottom: solid thin #fef6e4;
 }
 
 .subtitle {
     text-align: center;
+    font-weight: bold;
     margin: 1rem 0;
 }
 
@@ -33,11 +52,11 @@ ul li {
 }
 
 .link {
-    color: black;
+    color: #fef6e4;
 }
 
 .link:hover {
-    color: black;
+    color: #fef6e4;
     text-decoration: none;
 }
 
@@ -46,7 +65,7 @@ ul li {
 }
 
 .top-link-container:hover {
-    background-color: red;
+    background-color: rgba(0, 24, 88, 0.5);
 }
 
 .logo {
@@ -84,6 +103,8 @@ p {
     border-radius: 5px;
     box-sizing: border-box;
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.2);
+    background-color: #fffff8;
+    background-image: url("./img/Texture.png");
 }
 
 .work-panel {
@@ -94,6 +115,8 @@ p {
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.2);
     padding-bottom: 0.4rem;
     cursor: pointer;
+    background-color: #fffff8;
+    background-image: url("./img/Texture.png");
 }
 
 .work-image-container {
@@ -113,9 +136,9 @@ p {
 .footer {
     width: 100%;
     text-align: center;
-    background-color: red;
-    margin-top: 2rem;
-    padding: 1rem 0 2rem 0;
+    background-color: #001858;
+    color: #fef6e4;
+    padding: 2rem 0 2rem 0;
 }
 
 .sitemap {
@@ -147,7 +170,9 @@ p {
     max-width: 90vw;
     max-height: 90vh;
     min-width: 20rem;
-    background-color: white;
+    background-color: #fffff8;
+    background-image: url("./img/Texture.png");
+    color: #172c66;
     border: solid thin black;
     border-radius: 5px;
     text-align: center;
